fix(atomic): align search button in insight search box
https://coveord.atlassian.net/browse/KIT-1945

--- a/packages/atomic/src/components/insight/atomic-insight-search-box/atomic-insight-search-box.pcss
+++ b/packages/atomic/src/components/insight/atomic-insight-search-box/atomic-insight-search-box.pcss
@@ -12,6 +12,9 @@
 
 [part='submit-button'] {
   @apply w-10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .loading::after {
